--- a/SASS/base/_typography.scss
+++ b/SASS/base/_typography.scss
@@ -1,27 +1,27 @@
 body {
-    font-family: 'Lemonada', cursive;
-    color: $colour-primary;
-    font-size: 2rem;
-    //font-weight: 100;
-    line-height: 1.7;
+  font-family: "Lemonada", cursive;
+  color: $colour-1;
+  font-size: 2rem;
+  //font-weight: 100;
+  line-height: 1.7;
 }
 
 h1 {
-    font-family: 'Lemonada', cursive;
-    font-weight: 900;
-    font-size: 5rem;
-    font-style: italic;
+  font-family: "Lemonada", cursive;
+  font-weight: 900;
+  font-size: 5rem;
+  font-style: italic;
 }
 
 textarea {
-    font-family: 'Lemonada', cursive;
-    //font-weight: 100;
-    font-size: 2rem;
+  font-family: "Lemonada", cursive;
+  //font-weight: 100;
+  font-size: 2rem;
 }
 
 button {
-    font-family: 'Lemonada', cursive;
-    //font-weight: 900;
-    font-style: italic;
-    font-size: 2.75rem;
+  font-family: "Lemonada", cursive;
+  //font-weight: 900;
+  font-style: italic;
+  font-size: 2.75rem;
 }
